# map-editor

./: .gitignore  pyproject.toml  readme.md
mapeditor/: __main__.py  editor.py  gen.py  map.py  utils.py  window.py
